<resources>
    <string name="app_name">ShapeShifters</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="shapeshifters">ShapeShifters</string>
    <string name="email_hint">Email address</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_user_sign_up">Don\'t have an account? Sign up!</string>
    <string name="first_name">Fist name</string>
    <string name="last_name">Last name</string>
    <string name="account_type">Register as a trainer</string>
    <string name="user_login">Already have an account? Login!</string>

    <string name="your_username">Your username</string>
    <string name="your_email">Your email</string>
    <string name="menu_group_training">Group trainings</string>
    <string name="menu_personal_trainings">Personal trainings</string>
    <string name="menu_manage_clients">Manage clients</string>
    <string name="menu_add_clients">Add clients</string>
    <string name="submit">Submit</string>
    <string name="hint_name">Name</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_male">Male</string>
    <string name="hint_female">Female</string>
    <string name="hint_date_of_birth">Date of birth</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_fitness_level">Fitness level</string>
    <string name="hint_fitness_goals">Fitness goals</string>
    <string name="hint_preferred_training_slots">Preferred Training Slots</string>
    <string name="hint_m">M</string>
    <string name="hint_t">T</string>
    <string name="hint_w">W</string>
    <string name="hint_th">T</string>
    <string name="hint_f">F</string>
    <string name="hint_s">S</string>
    <string name="hint_sun">S</string>
    <string name="hint_membership_start_date">Membership start date</string>
    <string name="hint_weight_kg">Weight (kg)</string>
    <string name="hint_body_fat_percentage">Body Fat Percentage (%)</string>
    <string name="menu_add_workouts">Add workouts</string>
    <string name="exercise_name">Name of the exercise</string>
    <string name="reps">Repetition count</string>
    <string name="sets">How many set</string>
    <string name="weight">Add the weight (kg)</string>
    <string name="menu_manage_workouts">Manage workouts</string>
    <string name="notes">Notes</string>
    <string name="choose_client">Choose client</string>
    <string name="choose_date">Choose date</string>
    <string name="add_notes">Add notes</string>
    <string name="add_exercise">Add exercise</string>
    <string name="add">Add</string>
    <string name="exercise">Exercise</string>
    <string name="reps2">Reps</string>
    <string name="sets2">Sets</string>
    <string name="weight2">Weight</string>
    <string name="save">save</string>
    <string name="workouts">Workouts</string>
    <string name="schedule">Schedule</string>
    <string name="delete">Delete</string>
    <string name="cancel">Mégsem</string>
    <string name="confirm_delete">Are you sure you want to delete this item?</string>
    <string name="workout_added">Workout added successfully</string>
    <string name="workout_add_failed">Failed to add the workout</string>
    <string name="required_fields">All fields are required</string>
    <string name="bad_input">The input value is not accepted</string>
    <string-array name="levels_array">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>

    <string name="client_name_with_placeholder">Client name: %1$s</string>
    <string name="workout_notes_with_placeholder">Workout notes: \n%1$s</string>
    <string name="workout_date_with_placeholder">Workout date: %1$s</string>
    <string name="workout_date2_with_placeholder">%1$s - %2$s</string>
    <string name="ok">OK</string>
    <string name="workout_already_exists">Workout already exist</string>
    <string name="confirm_client_delete">This will delete every data associated with this client.\n\nAre you sure you want to delete?</string>
    <string name="client_date_of_birth_with_placeholder">Birthday: %1$s</string>
    <string name="client_phone_number_with_placeholder">Phone number: %1$s</string>
    <string name="client_fitness_level_with_placeholder">Level: %1$s</string>
    <string name="client_fitness_goal_with_placeholder">Goals: %1$s</string>
    <string name="client_training_slot_with_placeholder">Trainings: \n%1$s</string>
    <string name="client_membership_start_date_with_placeholder">Start date: %1$s</string>
    <string name="client_weight_with_placeholder">Weight: %1$s</string>
    <string name="client_notes_with_placeholder">Notes: \n%1$s</string>
</resources>