<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.grow.shapeshifters.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_group_trainings"
        android:name="com.grow.shapeshifters.ui.group_trainings.GroupTrainingsFragment"
        android:label="@string/menu_group_training"
        tools:layout="@layout/fragment_group_trainings" />

    <fragment
        android:id="@+id/nav_personal_trainings"
        android:name="com.grow.shapeshifters.ui.personal_trainings.PersonalTrainingsFragment"
        android:label="@string/menu_personal_trainings"
        tools:layout="@layout/fragment_personal_trainings" />

    <fragment
        android:id="@+id/nav_manage_clients"
        android:name="com.grow.shapeshifters.ui.manage_clients.ManageClientsFragment"
        android:label="@string/menu_manage_clients"
        tools:layout="@layout/fragment_manage_clients" />

    <fragment
        android:id="@+id/nav_add_clients"
        android:name="com.grow.shapeshifters.ui.add_clients.AddClientsFragment"
        android:label="@string/menu_add_clients"
        tools:layout="@layout/fragment_add_clients" />

    <fragment
        android:id="@+id/nav_manage_workouts"
        android:name="com.grow.shapeshifters.ui.manage_workouts.ManageWorkoutsFragment"
        android:label="@string/menu_manage_workouts"
        tools:layout="@layout/fragment_manage_workouts" />

    <fragment
        android:id="@+id/nav_add_workouts"
        android:name="com.grow.shapeshifters.ui.add_workouts.AddWorkoutsFragment"
        android:label="@string/menu_add_workouts"
        tools:layout="@layout/fragment_add_workouts" />
</navigation>