<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_group_trainings"
            android:icon="@drawable/ic_menu_group_trainings"
            android:title="@string/menu_group_training" />
        <item
            android:id="@+id/nav_personal_trainings"
            android:icon="@drawable/ic_menu_personal_trainings"
            android:title="@string/menu_personal_trainings" />
        <item
            android:id="@+id/nav_manage_clients"
            android:icon="@drawable/ic_menu_manage_clients"
            android:title="@string/menu_manage_clients" />
    </group>
</menu>