<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_clients.AddClientsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:backgroundTint="#665C6BC0"
        android:orientation="vertical"
        android:foregroundGravity="center"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="16dp">

        <EditText
            android:id="@+id/client_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints="name"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/linearLayoutGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_gender"
                android:paddingStart="3dp"
                android:textSize="18sp"
                android:layout_gravity="center" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/client_male"
                    android:layout_width="109dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/hint_male" />

                <RadioButton
                    android:id="@+id/client_female"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/hint_female" />
            </RadioGroup>
        </LinearLayout>

        <EditText
            android:id="@+id/client_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:hint="@string/hint_date_of_birth"
            android:textSize="18sp"
            android:inputType="date"
            android:layout_marginBottom="8dp"
            android:autofillHints="birthday" />

        <EditText
            android:id="@+id/client_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_number"
            android:focusable="true"
            android:inputType="phone"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:autofillHints="phone" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fitness_level"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="3dp"
                android:text="@string/hint_fitness_level"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/fitness_level_spinner"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/underline"
                android:textSize="20sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/client_fitness_goals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_fitness_goals"
            android:textSize="18sp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:layout_marginBottom="8dp"
            android:autofillHints="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingStart="3dp"
            android:text="@string/hint_preferred_training_slots" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_m" />

                <CheckBox
                    android:id="@+id/checkbox_tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_t" />

                <CheckBox
                    android:id="@+id/checkbox_wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_w" />

                <CheckBox
                    android:id="@+id/checkbox_thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_th" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_f" />

                <CheckBox
                    android:id="@+id/checkbox_saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_s" />

                <CheckBox
                    android:id="@+id/checkbox_sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_sun" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/client_membership_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:textSize="18sp"
            android:focusable="true"
            android:hint="@string/hint_membership_start_date"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/client_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="18sp"
            android:hint="@string/hint_weight_kg"
            android:focusable="true"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/client_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textSize="18sp"
            android:focusable="true"
            android:hint="@string/notes"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/client_add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="20sp"
            android:textColor="@color/custom_grey"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</ScrollView>
