<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- res/layout/dialog_add_exercise.xml -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextExerciseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exercise_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextReps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reps"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextSets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sets"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:inputType="numberDecimal" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>